flapivor/tests/m1/hopix/parser/bad/98-if-then-else-4.hopix
val inner =
  if x =? 0 then if y =? 1 then 0 else else 2